corrected bgimg for blog on mobile

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -547,7 +547,7 @@ noscript{ display:none;/* hides Clicky */ }
 #blog,#blog-small { background-position:0 0;}
 #portfolio,#snapshots-small{ background-position:-200px 0;}
 #contact,#contact-small{ background-position:-300px 0;}
-#y-gplus{ background-position:-300px 0; }
+#menu #y-gplus{ background-position:-100px 0;color:#000;text-shadow:0 1px 0 rgba(255,255,255,1); }
 .tooltip{text-indent:-9999px;background:transparent;}/* no tooltip for basic styling */
 /* TWEETS */
 #tweets,#snapshots,#message{ position:relative; }
